product 테이블과 notebook 테이블 조인 및 filter.html, productList.html 수정

--- a/springProject/src/main/resources/templates/product/filter.html
+++ b/springProject/src/main/resources/templates/product/filter.html
@@ -14,7 +14,7 @@
             <div>
                 <ul class="filterList" id="firstList">
                     <li>
-                        <span class="notSelected">노트북</span>
+                        <a href="#" class="notSelected">노트북</a>
                     </li>
                 </ul>
             </div>
@@ -26,74 +26,14 @@
             <div>
                 <ul class="filterList">
                     <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                </ul>
-            </div>
-        </article>
-        <article>
-            <div class="filterGroup">
-                <span>제품 분류</span>
-            </div>
-            <div>
-                <ul class="filterList">
-                    <li>
-                        <span class="notSelected">노트북</span>
+                        <a href="#" class="notSelected">ASUS</a>
                     </li>
                     <li>
-                        <span class="notSelected">노트북</span>
+                        <a href="#" class="notSelected">HP</a>
                     </li>
                     <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                    <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                    <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                    <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                    <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                    <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                    <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                    <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                    <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                    <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                    <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                    <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                    <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                    <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                    <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                    <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                    <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
+                        <a href="#" class="notSelected">LG</a>
+                    </li>       
                 </ul>
             </div>
         </article>
@@ -104,7 +44,28 @@
             <div>
                 <ul class="filterList">
                     <li>
-                        <span class="notSelected">노트북</span>
+                        <a href="#" class="notSelected">AMD라이젠3-4</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected">AMD라이젠5-4</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected">AMD라이젠7-4</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected"> AMD라이젠7-5</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected">AMD라이젠9-4</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected">AMD라이젠9-5</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected">인텔코어i5-12</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected">인텔코어i7-12</a>
                     </li>
                 </ul>
             </div>
@@ -116,7 +77,16 @@
             <div>
                 <ul class="filterList">
                     <li>
-                        <span class="notSelected">노트북</span>
+                        <a href="#" class="notSelected">14인치</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected">15.6인치</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected">16.1인치</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected">17.3인치</a>
                     </li>
                 </ul>
             </div>
@@ -128,19 +98,25 @@
             <div>
                 <ul class="filterList">
                     <li>
-                        <span class="notSelected">노트북</span>
+                        <a href="#" class="notSelected">8GB</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected">16GB</a>
                     </li>
                 </ul>
             </div>
         </article>
         <article>
             <div class="filterGroup">
-                <span>운영 체제</span>
+                <span>저장 용량</span>
             </div>
             <div>
                 <ul class="filterList">
                     <li>
-                        <span class="notSelected">노트북</span>
+                        <a href="#" class="notSelected">256GB</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected">512GB</a>
                     </li>
                 </ul>
             </div>
@@ -152,7 +128,34 @@
             <div>
                 <ul class="filterList">
                     <li>
-                        <span class="notSelected">노트북</span>
+                    	<a href="#" class="notSelected">1.12kg</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected">1.4kg</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected">1.48kg</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected">1.69kg</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected">1.75kg</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected">1.9kg</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected">2.29kg</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected">2.32kg</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected">2.46kg</a>
+                    </li>
+                    <li>
+                        <a href="#" class="notSelected">2.9kg</a>
                     </li>
                 </ul>
             </div>
@@ -163,16 +166,18 @@
             </div>
             <div>
                 <ul class="filterList">
-                    <li>
-                        <span>직접 입력</span>
+                    <li class="d-flex" style="align-items: center; vertical-align: middle;">
+                     <span>직접 입력</span>
+                     <form class="d-flex" role="search" action="#" id="priceSearchForm" name="priceSearchForm">
                         <span class="moneyInput">
-                            <input type="text" name="startMoney"><label>원</label>
+                            <input class="form-control border" type="text" onKeyup="this.value=this.value.replace(/[^0-9]/g,'');" name="startMoney"><label>원</label>
                             ~
-                            <input type="text" name="endMoney"><label>원</label>
+                            <input class="form-control border" type="text" onKeyup="this.value=this.value.replace(/[^0-9]/g,'');" name="endMoney"><label>원</label>
                         </span>
-                        <span class="pointer">
-                            <img src="https://cdn.icoda.co.kr/asset/img/usr/product/money_search.png">
-                        </span>
+						<button class="btn btn-secondary" type="submit" style="padding: 0; width: 25px; height: 25px; margin-left: 10px;">
+						    <img src="/public/img/pngegg.png">
+						</button>
+					 </form>
                     </li>
                 </ul>
             </div>
@@ -185,9 +190,16 @@
                 </div>
             </ul>
             <div class="pointer cancelAll">
-                전체 삭제
+            	<a href="#" style="text-decoration: none; color: black;">전체 삭제</a>
             </div>
         </div>
     </section>
+<script>
+	const priceSearchForm = document.forms.priceSearchForm;
+	priceSearchForm.addEventListener("submit", (event) => {
+		if((!priceSearchForm.startMoney.value||!priceSearchForm.startMoney.value.trim()) || (!priceSearchForm.endMoney.value||!priceSearchForm.endMoney.value.trim()))
+			event.preventDefault();
+	});
+</script>
 </body>
 </html>
