--- a/springProject/src/main/resources/static/public/css/filter.css
+++ b/springProject/src/main/resources/static/public/css/filter.css
@@ -38,19 +38,24 @@
     margin-right: 35px;
     margin-bottom: 16px;
 }
+#filterArea .filterList li a {
+	text-decoration: none;
+	color: black;
+}
 #filterArea .filterList .moneyInput {
     color: #b1b1b1;
     margin-left: 10px;
 }
 #filterArea .filterList input {
+	display: inline-block;
     width: 110px;
     height: 25px;
     background-color: #ffffff;
-    border: 1px solid #e3e3e3;
     box-sizing: border-box;
     padding-left: 5px;
     padding-right: 20px;
     text-align: right;
+    vertical-align: middle;
 }
 #filterArea .filterList label {
     color: #848484;
@@ -59,8 +64,8 @@
     margin-top: 6px;
 }
 #filterArea .filterList img {
-    vertical-align: middle;
-    margin-top: -2px;
+	width: 100%;
+	height: 100%;
 }
 #filterArea .filterList .notSelected, #filterArea .pointer {
     cursor: pointer;
