--- a/springProject/src/main/resources/static/public/css/productList.css
+++ b/springProject/src/main/resources/static/public/css/productList.css
@@ -24,11 +24,11 @@
 	margin: 30px 0;
     padding: 0;
 }
-#productContainer li {
+#productContainer #productItem {
 	display: flex;
 	justify-content: center;
 }
-#productContainer li .productList {
+#productContainer #productItem .productList {
     display: flex;
     list-style: none;
     padding: 15px;
@@ -52,6 +52,13 @@
     width: 450px;
     height: 150px;
     font-size: 12px;
+}
+#productContainer .listInfo .detail ul {
+	padding: 0;
+}
+#productContainer .listInfo .detail ul li {
+	list-style: none;
+	margin-bottom: 5px;
 }
 #productContainer .listInfo .property {
     display: inline-block;
