가격 검색 기능 구현

--- a/springProject/src/main/resources/templates/pagination/pageProductAll.html
+++ b/springProject/src/main/resources/templates/pagination/pageProductAll.html
@@ -3,27 +3,27 @@
 <nav aria-label="Page navigation example">
   <ul class="pagination">
     <li class="page-item" th:classappend="${(pageProductAll.isFirst) ? '' : 'disabled'}">
-      <a class="page-link" th:href="@{{url}{page}(url=${pageProductAll.url}, page=${pageProductAll.firstPage}, search=${param.search}, sort=${param.sort}, direct=${param.direct})}" aria-label="Previous">
+      <a class="page-link" th:href="@{{url}{page}(url=${pageProductAll.url}, page=${pageProductAll.firstPage}, search=${param.search}, startMoney=${param.startMoney}, endMoney=${param.endMoney}, sort=${param.sort}, direct=${param.direct})}" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
       </a>
     </li>
     <li class="page-item" th:classappend="${(pageProductAll.isPrevious) ? '' : 'disabled'}">
-      <a class="page-link" th:href="@{{url}{page}(url=${pageProductAll.url}, page=${pageProductAll.previousPage}, search=${param.search}, sort=${param.sort}, direct=${param.direct})}">
+      <a class="page-link" th:href="@{{url}{page}(url=${pageProductAll.url}, page=${pageProductAll.previousPage}, search=${param.search}, startMoney=${param.startMoney}, endMoney=${param.endMoney}, sort=${param.sort}, direct=${param.direct})}">
         Prev
       </a>
     </li>
     <th:block th:each="n : ${#numbers.sequence(pageProductAll.start, pageProductAll.end)}">
 	    <li class="page-item" th:classappend="${(pageProductAll.page == n) ? 'active' : ''}">
-	    	<a class="page-link" th:href="@{{url}{page}(url=${pageProductAll.url}, page=${n}, search=${param.search}, sort=${param.sort}, direct=${param.direct})}" th:text="${n}"></a>
+	    	<a class="page-link" th:href="@{{url}{page}(url=${pageProductAll.url}, page=${n}, search=${param.search}, startMoney=${param.startMoney}, endMoney=${param.endMoney}, sort=${param.sort}, direct=${param.direct})}" th:text="${n}"></a>
 	    </li>  
     </th:block>
     <li class="page-item" th:classappend="${(pageProductAll.isNext) ? '' : 'disabled'}">
-      <a class="page-link" th:href="@{{url}{page}(url=${pageProductAll.url}, page=${pageProductAll.nextPage}, search=${param.search}, sort=${param.sort}, direct=${param.direct})}">
+      <a class="page-link" th:href="@{{url}{page}(url=${pageProductAll.url}, page=${pageProductAll.nextPage}, search=${param.search}, startMoney=${param.startMoney}, endMoney=${param.endMoney}, sort=${param.sort}, direct=${param.direct})}">
         Next
       </a>
     </li>
     <li class="page-item" th:classappend="${(pageProductAll.isLast) ? '' : 'disabled'}">
-      <a class="page-link" th:href="@{{url}{page}(url=${pageProductAll.url}, page=${pageProductAll.lastPage}, search=${param.search}, sort=${param.sort}, direct=${param.direct})}" aria-label="Next">
+      <a class="page-link" th:href="@{{url}{page}(url=${pageProductAll.url}, page=${pageProductAll.lastPage}, search=${param.search}, startMoney=${param.startMoney}, endMoney=${param.endMoney}, sort=${param.sort}, direct=${param.direct})}" aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
       </a>
     </li>
