--- a/springProject/src/main/resources/templates/header.html
+++ b/springProject/src/main/resources/templates/header.html
@@ -50,7 +50,7 @@
 			    		<a href="#">마이페이지</a>
 			    	</li>
 			    </th:block>
-			    <li class="breadcrumb-item"><a href="#">장바구니</a></li>
+			    <li class="breadcrumb-item"><a href="/user/cart">장바구니</a></li>
 			  </ol>
 			</nav>  
         </div>
