아이디찾기

--- a/springProject/src/main/resources/templates/header.html
+++ b/springProject/src/main/resources/templates/header.html
@@ -30,7 +30,7 @@
 			  <ol class="breadcrumb">
 			  	<th:block th:if="${session.loginUser == null}">
 			    	<li class="breadcrumb-item">
-			    		<a href="/user/login.do">로그인</a>
+			    		<a href="/user/login">로그인</a>
 			    	</li>
 			    	<li class="breadcrumb-item">
 			    		<a href="/user/signup">회원가입</a>
