--- a/springProject/src/main/resources/templates/user/login.html
+++ b/springProject/src/main/resources/templates/user/login.html
@@ -20,7 +20,8 @@
 			    <label for="inputPw" class="form-label">유저 비밀번호</label>
 			    <input type="password" name="user_pw" class="form-control" id="inputPw">
 			  </div>
-			  <button type="submit" class="btn btn-primary">Submit</button>
+			  <button type="submit" class="btn btn-primary">로그인</button>
+			  <a href="/user/findId">아이디 찾기</a>
 			</form>
 		</div>
 	</main>
