--- a/springProject/src/main/resources/templates/header.html
+++ b/springProject/src/main/resources/templates/header.html
@@ -83,7 +83,7 @@
 	        </div>
     	</div>
     	<div class="dropdown" id="dropdown4">
-	        <button class="dropdown-btn">고객 센터</button>
+	        <a href="/question/center"><button class="dropdown-btn">고객 센터</button></a>
 	        <div class="dropdown-submenu">
 	            <a href="#none">공지 사항</a>
 	            <a href="/question/faqList/0/1">FAQ</a>
