--- a/springProject/src/main/resources/templates/question/center.html
+++ b/springProject/src/main/resources/templates/question/center.html
@@ -5,7 +5,7 @@
 <title>고객센터</title>
 </head>
 <style>
-     #box1{
+/*      #box1{
           display: flex;
           justify-content: center;
           height: 220px;
@@ -43,7 +43,7 @@
           height: 200px;
           margin: auto;
           border: 1px solid black;
-     }
+     } */
      #info{
           text-align: center;
           line-height: 30px;
@@ -61,7 +61,7 @@
 		<h1>고객센터</h1>	
 	</div>
 	<hr>
-	<div id="box1">
+	<!-- <div id="box1">
           <div id="qna">
                <a href="/question/qnaList/1"><h1>QnA</h1></a>
           </div>
@@ -73,6 +73,29 @@
 	 <div id="one">
           <a href="/question/insertQna.do"><h1>1대1 문의</h1></a>
           <a href="/question/myQna/$loginUser.getUserId()"><h1>내 문의글</h1></a>          
+     </div> -->
+     <h2>QnA</h2>
+     <div id="table">
+     	<table id="tableList" class="table table-striped table-hover">
+	     	<thead>
+	     		<tr>
+	     			<th>글 번호</th>
+	     			<th>제목</th>
+	     			<th>작성자 아이디</th>
+	     			<th>작성일
+	     		</tr>
+	     	</thead>
+	     	<tbody>
+	     		<th:block th:each="qna: ${qnaList/1}">
+                	<tr th:onclick="location.href='/question/qnaDetail/[[${qna.qnaboard_no}]]'">
+	                    <td th:text="${qna.qnaboard_no}"></td>
+	                    <td th:text="${qna.qnaboard_title}"></td>
+	                    <td th:text="${qna.user_id}"></td>
+	                    <td th:text="${#dates.format(qna.post_time, 'yyyy-MM-dd')}"></td>
+                	</tr>
+                </th:block>
+	     	</tbody>
+     	</table>
      </div>
      <div id="info">
           <p>전화 연결</p>
